<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.YearListActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2016"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:background="@color/a2016">

                    <TextView
                        android:id="@+id/a2016"
                        style="@style/label"
                        android:text="@string/a2016" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2015"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2015">

                    <TextView
                        android:id="@+id/a2015"
                        style="@style/label"
                        android:text="@string/a2015" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/box2014"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2014">

                    <TextView
                        android:id="@+id/a2014"
                        style="@style/label"
                        android:text="@string/a2014" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2013"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2013">

                    <TextView
                        android:id="@+id/a2013"
                        style="@style/label"
                        android:text="@string/a2013" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/box2012"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2012">

                    <TextView
                        android:id="@+id/a2012"
                        style="@style/label"
                        android:text="@string/a2012" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2011"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2011">

                    <TextView
                        android:id="@+id/a2011"
                        style="@style/label"
                        android:text="@string/a2011" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/box2010"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2010">

                    <TextView
                        android:id="@+id/a2010"
                        style="@style/label"
                        android:text="@string/a2010" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2009"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2009">

                    <TextView
                        android:id="@+id/a2009"
                        style="@style/label"
                        android:text="@string/a2009" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/box2008"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2008">

                    <TextView
                        android:id="@+id/a2008"
                        style="@style/label"
                        android:text="@string/a2008" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2007"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2007">

                    <TextView
                        android:id="@+id/a2007"
                        style="@style/label"
                        android:text="@string/a2007" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/box2006"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2006">

                    <TextView
                        android:id="@+id/a2006"
                        style="@style/label"
                        android:text="@string/a2006" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/box2005"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2005">

                    <TextView
                        android:id="@+id/a2005"
                        style="@style/label"
                        android:text="@string/a2005" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/box2004"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/a2004">

                    <TextView
                        android:id="@+id/a2004"
                        style="@style/label"
                        android:text="@string/a2004" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
