<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="org.bok.mk.sukela.ui.MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:background="@color/bacground1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Eksi Button-->
            <LinearLayout
                android:id="@+id/eksi_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/eksi">

                <ImageView
                    android:id="@+id/eksi_logo"
                    android:layout_width="52dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/eksi_logo"/>

                <TextView
                    android:id="@+id/eksi_label"
                    style="@style/sozuk_label"
                    android:tag="E"
                    android:text="@string/eksi"/>
            </LinearLayout> <!--Eksi Button-->

            <!--Eksi Item List-->
            <RelativeLayout
                android:id="@+id/eksi_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/eksi_left_side"
                    style="@style/box_left_side"
                    android:layout_above="@+id/eksi_bottom_line"
                    android:background="@color/eksi"/>

                <TextView
                    android:id="@+id/eksi_right_side"
                    style="@style/box_right_side"
                    android:layout_alignBottom="@+id/eksi_left_side"
                    android:background="@color/eksi"/>

                <TextView
                    android:id="@+id/eksi_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@+id/eksi_list_container"
                    android:background="@color/eksi"/>

                <LinearLayout
                    android:id="@+id/eksi_list_container"
                    style="@style/list_container"
                    android:layout_toLeftOf="@+id/eksi_right_side"
                    android:layout_toStartOf="@+id/eksi_right_side">

                    <TextView
                        android:id="@+id/eksi_year"
                        style="@style/list_item"
                        android:text="@string/best_of_year"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/eksi_yesterday"
                        style="@style/list_item"
                        android:text="@string/best_of_yesterday"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/eksi_week"
                        style="@style/list_item"
                        android:text="@string/best_of_week"/>

                    <TextView style="@style/list_item_separator"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/eksi_yazar"
                            style="@style/list_item"
                            android:layout_weight="1"
                            android:text="@string/yazarlar"/>

                        <TextView
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/eksi_gundem"
                            style="@style/list_item"
                            android:layout_weight="1"
                            android:text="@string/eksi_gundem"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout> <!--Eksi Item List-->

            <!--Instela Button-->
            <LinearLayout
                android:id="@+id/instela_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/instela">

                <ImageView
                    android:id="@+id/instela_logo"
                    android:layout_width="52dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/instela_logo"/>

                <TextView
                    android:id="@+id/instela_label"
                    style="@style/sozuk_label"
                    android:tag="I"
                    android:text="@string/instela"/>
            </LinearLayout> <!--Instela Button-->

            <!--Instela Item List-->
            <RelativeLayout
                android:id="@+id/instela_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/instela_left_side"
                    style="@style/box_left_side"
                    android:layout_above="@+id/instela_bottom_line"
                    android:background="@color/instela"/>

                <TextView
                    android:id="@+id/instela_right_side"
                    style="@style/box_right_side"
                    android:layout_alignBottom="@+id/instela_left_side"
                    android:background="@color/instela"/>

                <TextView
                    android:id="@+id/instela_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@+id/instela_list_container"
                    android:background="@color/instela"/>

                <LinearLayout
                    android:id="@+id/instela_list_container"
                    style="@style/list_container"
                    android:layout_toLeftOf="@+id/instela_right_side"
                    android:layout_toStartOf="@+id/instela_right_side">

                    <TextView
                        android:id="@+id/instela_month"
                        style="@style/list_item"
                        android:text="@string/best_of_month"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/instela_week"
                        style="@style/list_item"
                        android:text="@string/best_of_week"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/instela_yesterday"
                        style="@style/list_item"
                        android:text="@string/best_of_yesterday"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/instela_t20"
                        style="@style/list_item"
                        android:text="@string/top20"/>
                </LinearLayout>
            </RelativeLayout> <!--Instela Item List-->

            <!--İnci Button-->
            <LinearLayout
                android:id="@+id/inci_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/inci">

                <ImageView
                    android:id="@+id/inci_logo"
                    android:layout_width="52dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/inci_logo"/>

                <TextView
                    android:id="@+id/inci_label"
                    style="@style/sozuk_label"
                    android:tag="C"
                    android:text="@string/inci"/>
            </LinearLayout> <!--İnci Button-->

            <!--İnci Item List-->
            <RelativeLayout
                android:id="@+id/inci_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/inci_left_side"
                    style="@style/box_left_side"
                    android:layout_above="@+id/inci_bottom_line"
                    android:background="@color/inci"/>

                <TextView
                    android:id="@+id/inci_right_side"
                    style="@style/box_right_side"
                    android:layout_alignBottom="@+id/inci_left_side"
                    android:background="@color/inci"/>

                <TextView
                    android:id="@+id/inci_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@+id/inci_list_container"
                    android:background="@color/inci"/>

                <LinearLayout
                    android:id="@+id/inci_list_container"
                    style="@style/list_container"
                    android:layout_toLeftOf="@+id/inci_right_side"
                    android:layout_toStartOf="@+id/inci_right_side">

                    <TextView
                        android:id="@+id/inci_yesterday"
                        style="@style/list_item"
                        android:text="@string/inci_yesterday"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/inci_week"
                        style="@style/list_item"
                        android:text="@string/best_of_week"/>
                </LinearLayout>
            </RelativeLayout> <!--İnci Item List-->


            <!--Uludağ-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/uludag">

                <ImageView
                    android:id="@+id/ulu_logo"
                    android:layout_width="52dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ulu_logo2"/>

                <TextView
                    android:id="@+id/uludag_label"
                    style="@style/sozuk_label"
                    android:tag="U"
                    android:text="@string/uludag"/>
            </LinearLayout> <!--Uludağ-->

            <!--Uludağ Item List-->
            <RelativeLayout
                android:id="@+id/uludag_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/uludag_left_side"
                    style="@style/box_left_side"
                    android:layout_above="@+id/uludag_bottom_line"
                    android:background="@color/uludag"/>

                <TextView
                    android:id="@+id/uludag_right_side"
                    style="@style/box_right_side"
                    android:layout_alignBottom="@+id/uludag_left_side"
                    android:background="@color/uludag"/>

                <TextView
                    android:id="@+id/uludag_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@+id/uludag_list_container"
                    android:background="@color/uludag"/>

                <LinearLayout
                    android:id="@+id/uludag_list_container"
                    style="@style/list_container"
                    android:layout_toLeftOf="@+id/uludag_right_side"
                    android:layout_toRightOf="@+id/uludag_left_side"
                    android:layout_toStartOf="@+id/uludag_right_side">

                    <TextView
                        android:id="@+id/uludag_week"
                        style="@style/list_item"
                        android:text="@string/best_of_week"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/uludag_yesterday"
                        style="@style/list_item"
                        android:text="@string/best_of_yesterday"/>
                </LinearLayout>
            </RelativeLayout>
            <!--Uludağ Item List-->


            <!--save-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/save">

                <ImageView
                    android:id="@+id/save_logo"
                    android:layout_width="52dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:src="@drawable/sakla_logo"/>

                <TextView
                    android:id="@+id/save_label"
                    style="@style/sozuk_label"
                    android:tag="S"
                    android:text="@string/save"/>
            </LinearLayout> <!--Uludağ-->

            <!--Uludağ Item List-->
            <RelativeLayout
                android:id="@+id/save_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/save_left_side"
                    style="@style/box_left_side"
                    android:layout_above="@+id/save_bottom_line"
                    android:background="@color/save"/>

                <TextView
                    android:id="@+id/save_right_side"
                    style="@style/box_right_side"
                    android:layout_alignBottom="@+id/save_left_side"
                    android:background="@color/save"/>

                <TextView
                    android:id="@+id/save_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@+id/save_list_container"
                    android:background="@color/save"/>

                <LinearLayout
                    android:id="@+id/save_list_container"
                    style="@style/list_container"
                    android:layout_toLeftOf="@+id/save_right_side"
                    android:layout_toRightOf="@+id/save_left_side"
                    android:layout_toStartOf="@+id/save_right_side">

                    <TextView
                        android:id="@+id/save_good"
                        style="@style/list_item"
                        android:text="@string/save_for_good"/>

                    <TextView style="@style/list_item_separator"/>

                    <TextView
                        android:id="@+id/save_long"
                        style="@style/list_item"
                        android:text="@string/save_for_later"/>
                </LinearLayout>
            </RelativeLayout>
            <!--Uludağ Item List-->


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
